seedboxk8s/applications/kubernetes-dashboard/Middleware.forward-auth-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth-headers
  namespace: kubernetes-dashboard
spec:
  headers:
    customRequestHeaders:
      Authorization: "Authorization"
