seedboxk8s/applications/kubernetes-dashboard/Middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  forwardAuth:
    address: "http://oauth2-proxy.kubernetes-dashboard.svc.cluster.local/oauth2/auth"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
