seedboxk8s/applications/kubernetes-dashboard/Service.oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
  labels:
    app: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4180
    protocol: TCP
  - name: metrics
    port: 44180
    targetPort: 44180
    protocol: TCP
