seedboxk8s/applications/kubernetes-dashboard/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  # - match: Host(`kubernetes.${clusterFqdn}`)
  - match: Host(`kubernetes.younix.us`)
    kind: Rule
    services:
    - name: oauth2-proxy
      port: 80
    middlewares:
    - name: forward-auth-headers
      namespace: kubernetes-dashboard
  tls:
    secretName: younix-dot-us-wildcard-backing-secret
